@@ -9,6 +9,7 @@
 	    and much more solid.
 	* Wrote sed -- weighs only 1.8k (5.8k with full regular expressions!).
 	* Fixed a stupid seg-fault in sync
+	* Fixed mount -- mount -a always mounted rw despite /etc/fstab ro entries.
 
 	 -Erik Andersen
 
